# vk_edu_cpp_homework1

./: .gitignore  CMakeLists.txt  README.md  clang-formating.sh
.github/workflows/: Format-and-linters.yml  build-and-test.yml  build.yml  format-and-linters.yml  tests.yml
project/: main.c
project/include/: dispatcher.h  parabola_builder.h  point.h  solver.h
project/src/: dispatcher.c  point.c  solver.c
scripts/: analyzers-check.sh  build.sh  clang-formating.sh  coverage-generator.sh
tests/: SolverTests.cpp
tests/core/: PointTests.cpp  SolverTests.cpp
tests/interface/: InterfaceTests.cpp
tests/solver/: SolverTests.cpp
